--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,7 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hello Bulma!</title>
-    <link rel="stylesheet" href="{% static 'bulma/css/bulma.css' %}">
-  </head>
-  <body>
+{% extends 'base.html' %}
+{% load embed_video_tags %}
+
+{% block content %}
   <section class="section">
     <div class="container">
       <h1 class="title">
@@ -16,7 +10,16 @@
       <p class="subtitle">
         My first website with <strong>Bulma</strong>!
       </p>
+        <form method="POST">{% csrf_token %}
+            <input>
+        </form>
     </div>
   </section>
-  </body>
-</html>
+    {% for song in object_list %}
+        {{ song.name }}
+        {% video song.video as my_video %}
+            <img src="{{ my_video.thumbnail }}">
+            {% video my_video '800x600' %}
+        {% endvideo %}
+    {% endfor %}
+{% endblock content %}
