--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,7 +1,7 @@
 {% load static %}
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <a class="navbar-item" href="https://bulma.io">
+    <a class="navbar-item" href="{% url 'index' %}">
       <img src="{% static 'images/logo.png' %}" width="112" height="28">
     </a>
 
@@ -15,7 +15,7 @@
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
       {% if user.is_authenticated %}
-      <a class="navbar-item">
+      <a class="navbar-item" href="{% url 'user-profile' user.pk %}">
         Profile
       </a>
 
@@ -32,7 +32,7 @@
             <strong>Log out</strong>
           </a>
           {% else %}
-          <a class="button is-primary">
+          <a class="button is-primary" href="{% url 'signup' %}">
             <strong>Sign up</strong>
           </a>
           <a class="button is-light" href="{% url 'login' %}">
