--- a/templates/song_detail.html
+++ b/templates/song_detail.html
@@ -1,10 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% load embed_video_tags static %}
 
-</body>
-</html>
+
+{% block content %}
+
+{% if user.is_authenticated and object.author == user%}
+<section id="video-detail" class="is-halfheight">
+<a href="{% url 'song-edit' object.pk %}" class="button is-info">Edit</a>
+<a href="{% url 'song-delete' object.pk %}" class="button is-danger">Delete</a>
+</section>
+{% endif %}
+
+<div class="columns">
+  <div class="column">
+    {% video object.video as my_video %}
+      {% video my_video "small" %}
+    {% endvideo %}
+  <p>Likes: {{ object.like_set.count }}</p>
+  {% if user.is_authenticated and object.author != user and not can_like %}
+      <a href="{% url 'like-song' object.pk %}">
+        <img src="{% static 'images/like.png' %}" alt="Like song" width="25" height="25">
+      </a>
+  {% endif %}
+  </div>
+  <div class="column">
+    {{ object.lyrics|safe|escape }}
+  </div>
+</div>
+
+{% endblock content %}
