--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -19,7 +19,7 @@
         Profile
       </a>
 
-      <a class="navbar-item">
+      <a class="navbar-item" href="{% url 'song-create' %}">
         New Song
       </a>
       {% endif %}
@@ -28,11 +28,11 @@
       <div class="navbar-item">
         <div class="buttons">
           {% if user.is_authenticated %}
-          <a class="button is-primary" href="{% url 'logout' %}">
+          <a class="button is-primary" href="{% url 'logout' %}" style="background-color: #1ba1be">
             <strong>Log out</strong>
           </a>
           {% else %}
-          <a class="button is-primary" href="{% url 'signup' %}">
+          <a class="button is-primary" href="{% url 'signup' %}" style="background-color: #1ba1be">
             <strong>Sign up</strong>
           </a>
           <a class="button is-light" href="{% url 'login' %}">
