--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -5,7 +5,7 @@
   <div class="hero-body">
     <div class="container">
       <div class="columns is-centered">
-        <div class="column is-5-tablet is-4-desktop is-3-widescreen">
+        <div class="column is-5-tablet is-5-desktop is-5-widescreen">
           <form action="" class="box" method="POST">{% csrf_token %}
             <div id="login-error">
                 {{ form.non_field_errors }}
@@ -13,7 +13,7 @@
             <div class="field">
               <label for="" class="label">Email</label>
               <div class="control has-icons-left">
-                <input class="input" type="email" placeholder="e.g. bobsmith@gmail.com" name="username" required id="id_username" maxlength="254" autocomplete="email">
+                <input class="input" type="email" placeholder="lgocev@gmail.com" name="username" required id="id_username" maxlength="254" autocomplete="email">
                 <span class="icon is-small is-left">
                   <i class="fa fa-envelope"></i>
                 </span>
