--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Singing!</title>
-    <link rel="stylesheet" href="{% static 'css/bulma/css/bulma.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bulma.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/singing.css' %}">
   </head>
   <body>
