--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -44,3 +44,18 @@
     </div>
   </div>
 </nav>
+<script>
+    const burger = document.querySelector(".navbar-brand .burger");
+    const menuItems = document.getElementById("navbarBasicExample");
+    if (burger) {
+        burger.addEventListener("click", (event) => {
+            if (burger.classList.contains("is-active")) {
+                burger.classList.remove("is-active");
+                menuItems.classList.remove("is-active");
+            } else {
+                burger.classList.add("is-active");
+                menuItems.classList.add("is-active");
+            }
+        })
+    }
+</script>
