--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
   <div class="hero-body">
     <div class="container">
       <div class="columns is-centered">
-        <div class="column is-6-tablet is-6-desktop is-7-widescreen">
+        <div class="column is-10-tablet is-8-desktop">
           <figure class="image is-128x128 is-center">
             {% if user.avatar %}
                 <img class="is-rounded" src="{{user.avatar.url}}">
