--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<section class="hero is-primary is-fullheight">
+<section class="hero is-info is-fullheight" style="background: linear-gradient(153deg, rgba(0,212,255,1) 0%, rgba(2,0,36,0.3211659663865546) 50%, rgba(26,162,190,1) 100%);">
   <div class="hero-body">
     <div class="container">
       <div class="columns is-centered">
-        <div class="column is-5-tablet is-5-desktop is-5-widescreen">
+        <div class="column is-7-tablet is-5-desktop">
           <form action="" class="box" method="POST">{% csrf_token %}
             <div id="login-error">
                 {{ form.non_field_errors }}
