--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -15,7 +15,7 @@
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
       {% if user.is_authenticated %}
-      <a class="navbar-item" href="{% url 'user-profile' user.pk %}">
+      <a class="navbar-item" href="{% url 'user-profile' %}">
         Profile
       </a>
 
