--- a/static/css/singing.css
+++ b/static/css/singing.css
@@ -14,6 +14,7 @@ img {
     overflow-y: auto;
     margin-top: 20px;
     font-family: fantasy, serif;
+    text-align: center;
 }
 
 #video_column {
